frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daniscarpa-frontend
  namespace: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: daniscarpa-frontend
  template:
    metadata:
      labels:
        app: daniscarpa-frontend
    spec:
      containers:
      - name: daniscarpa-frontend
        image: gcr.io/daniscarpa/frontend:latest
        ports:
        - name: http
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: daniscarpa-frontend
  namespace: frontend
spec:
  type: NodePort
  ports:
  - name: frontend
    port: 3000
    targetPort: http
  selector:
    app: daniscarpa-frontend
