frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: daniscarpa-frontend
  namespace: frontend
spec:
  type: NodePort
  ports:
  - name: frontend
    port: 3000
  selector:
    app: daniscarpa-frontend
