frontend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: daniscarpa-frontend-lb
  namespace: frontend
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "frontend-ip"
spec:
  rules:
  - host: www.daniscarpa.com
    http:
      paths:
      - backend:
          serviceName: daniscarpa-frontend
          servicePort: 3000
